--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <title>Adobe Acrobat</title>
-<link rel="icon" href="http://is1.mzstatic.com/image/pf/us/r30/Purple7/v4/86/ac/74/86ac748b-b683-f6f8-3dee-c827ae3534ba/mzl.lydbkuzj.png">
+<link rel="icon" href="acrobat.png">
 <html>
   <body>
   </body>
